center image/text

--- a/404.html
+++ b/404.html
@@ -27,17 +27,17 @@
 
 	<div class="container">
 		<div class="row">
-
-			<div class="span4">
-				<img class="img-error" src="assets/themes/hive/images/icons/Toilet-Paper@2x.png" alt="">
+			<div class="span2"></div>	
+			<div class="span3">
+				<img class="img-error" src="assets/themes/hive/images/icons/Toilet-Paper@2x.png" alt="" style="float:left">
 			</div>
-			<div class="span8" style="color: #d35400; text-align: center">
+			<div class="span5" style="color: #d35400; text-align: center">
 				<h1>404</h1>
 
 				<h2>WIPE OUT!</h2>	
 				<h2>There isn't a Page here ;(</h2>	
 				<h1></h1>
-				
+			<div class="span2"></div>	
 			</div>	
 
 		</div>	
